--- a/css/styles.css
+++ b/css/styles.css
@@ -560,6 +560,9 @@ header .container_main .img_main img {
   margin-right: auto;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
 .contact .container_contact .conta_box {
   width: 90%;
@@ -572,11 +575,26 @@ header .container_main .img_main img {
   text-align: center;
   padding-top: 50px;
 }
+@media screen and (min-width: 768px) {
+  .contact .container_contact .conta_box:nth-child(1) {
+    padding-top: 0;
+    font-size: 27px;
+  }
+}
 .contact .container_contact .conta_box:nth-child(4) {
   font-size: 18px;
   letter-spacing: 2px;
   text-align: center;
   padding-top: 10px;
+}
+@media screen and (min-width: 768px) {
+  .contact .container_contact .conta_box:nth-child(4) {
+    width: 30%;
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
 }
 @media screen and (min-width: 768px) {
   .contact .container_contact .conta_box {
@@ -585,6 +603,11 @@ header .container_main .img_main img {
 }
 .contact .container_contact .box2, .contact .container_contact .box3 {
   display: none;
+}
+@media screen and (min-width: 768px) {
+  .contact .container_contact .box2, .contact .container_contact .box3 {
+    display: block;
+  }
 }
 .contact .container_contact .box4 {
   width: 100%;
@@ -604,6 +627,13 @@ header .container_main .img_main img {
   background-color: #333;
   color: #fff;
 }
+@media screen and (min-width: 768px) {
+  .contact .container_contact .box4 .input {
+    font-size: 14px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
 .contact .container_contact .box4 .button_conta {
   width: 28%;
   height: 31px;
@@ -614,6 +644,13 @@ header .container_main .img_main img {
   border-radius: 0 30px 30px 0;
   border: 1px solid #fff;
 }
+@media screen and (min-width: 768px) {
+  .contact .container_contact .box4 .button_conta {
+    font-size: 14px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
 .contact .container_contact .box4 .espace {
   width: 100%;
   padding-top: 15px;
@@ -623,4 +660,11 @@ header .container_main .img_main img {
   letter-spacing: 5px;
   font-weight: 300;
   text-transform: uppercase;
+}
+@media screen and (min-width: 768px) {
+  .contact .container_contact .box4 .espace {
+    font-size: 14px;
+    padding: 0;
+    text-align: center;
+  }
 }
