--- a/SCSS/components/_footer.SCSS
+++ b/SCSS/components/_footer.SCSS
@@ -23,3 +23,8 @@ footer .footer span {
     color: #f7e811;
     font-size: 16px;
 }
+
+footer .footer h2 .ph {
+    color: #fff;
+    font-size: 13px;
+}
