--- a/css/styles.css
+++ b/css/styles.css
@@ -549,31 +549,6 @@ header .container_main .img_main img {
   object-fit: cover;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-footer .footer {
-  width: 100%;
-  height: auto;
-  padding: 15px 10px;
-  background-color: #000;
-}
-
-footer .footer h2 {
-  text-align: center;
-  font-size: 12px;
-  color: #fff;
-  letter-spacing: 1.5px;
-}
-
-footer .footer span {
-  color: #f7e811;
-  font-size: 16px;
-}
-
 .contact {
   width: 100%;
   height: auto;
@@ -694,4 +669,34 @@ footer .footer span {
     padding: 0;
     text-align: center;
   }
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+footer .footer {
+  width: 100%;
+  height: auto;
+  padding: 15px 10px;
+  background-color: #000;
+}
+
+footer .footer h2 {
+  text-align: center;
+  font-size: 12px;
+  color: #fff;
+  letter-spacing: 1.5px;
+}
+
+footer .footer span {
+  color: #f7e811;
+  font-size: 16px;
+}
+
+footer .footer h2 .ph {
+  color: #fff;
+  font-size: 13px;
 }
